src/tests/errors/refs/001.err
[1m[0;31merror: [0mtrailing `ref` is no longer supported; write `ref p Point` instead
   [1m[34m-->[0m src/tests/errors/refs/001.ura:10:5
   [1m[34m|[0m
[1m[34m10 |[0m     ref r Point
   [1m[34m|[0m     [1;31m^^^[0m
